--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,18 +10,22 @@ jobs:
 
   complete:
     if: always()
-    needs:
-    - build-cargo-workspaces
-    - build-cargo-hack
-    - build-cargo-set-rust-version
+    needs: build-rust
     runs-on: ubuntu-latest
     steps:
     - if: contains(needs.*.result, 'failure') || contains(needs.*.result, 'cancelled')
       run: exit 1
 
-  build-cargo-workspaces:
+  build-rust:
     strategy:
       matrix:
+        crate:
+        - name: cargo-workspaces
+          version: '0.2.35'
+        - name: cargo-hack
+          version: '0.5.16'
+        - name: cargo-set-rust-version
+          version: '0.5.0'
         sys:
         - os: ubuntu-latest
         - os: macos-latest
@@ -31,45 +35,13 @@ jobs:
     - uses: actions/checkout@v3
     - run: rustup update
     # - uses: stellar/actions/rust-cache@main
-    - run: cargo install --target-dir ~/.cargo/target --root . --locked --version 0.2.35 cargo-workspaces
+    - run: cargo install --target-dir ~/.cargo/target --root . --locked --version ${{ matrix.crate.version }} ${{ matrix.crate.name }}
+    - shell: bash
+      run: tar cvfz ${{ matrix.crate.name }}-${{ matrix.crate.version }}-${{ matrix.sys.os }}.tar.gz -C bin .
     - uses: actions/upload-artifact@v3
       with:
-        name: cargo-workspaces-${{ matrix.sys.os }}
-        path: ./bin/cargo-workspaces*
-
-  build-cargo-hack:
-    strategy:
-      matrix:
-        sys:
-        - os: ubuntu-latest
-        - os: macos-latest
-        - os: windows-latest
-    runs-on: ${{ matrix.sys.os }}
-    steps:
-    - uses: actions/checkout@v3
-    # - uses: stellar/actions/rust-cache@main
-    - run: rustup update
-    - run: cargo install --target-dir ~/.cargo/target --root . --locked --version 0.5.16 cargo-hack
-    - uses: actions/upload-artifact@v3
-      with:
-        name: cargo-hack-${{ matrix.sys.os }}
-        path: ./bin/cargo-hack*
-
-  build-cargo-set-rust-version:
-    strategy:
-      matrix:
-        sys:
-        - os: ubuntu-latest
-    runs-on: ${{ matrix.sys.os }}
-    steps:
-    - uses: actions/checkout@v3
-    # - uses: stellar/actions/rust-cache@main
-    - run: rustup update
-    - run: cargo install --target-dir ~/.cargo/target --root . --locked --version 0.5.0 cargo-set-rust-version
-    - uses: actions/upload-artifact@v3
-      with:
-        name: cargo-set-rust-version-${{ matrix.sys.os }}
-        path: ./bin/cargo-set-rust-version*
+        name: ${{ matrix.crate.name }}-${{ matrix.crate.version }}-${{ matrix.sys.os }}
+        path: '*.tar.gz'
 
   release-create:
     # if: github.ref_name == 'main'
@@ -91,7 +63,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/download-artifact@v3
-    - run: find * -maxdepth 0 -not -path '*/.*' -type d -print0 | xargs -0 -I{} tar cvfz {}.tar.gz -C {} .
-    - run: gh release -R ${{ github.repository }} upload --clobber "${{ needs.release-create.outputs.tag }}" *.tar.gz
+    - run: gh release -R ${{ github.repository }} upload --clobber "${{ needs.release-create.outputs.tag }}" **/*.tar.gz
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
