--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,6 +19,10 @@ jobs:
     steps:
     - run: echo $PATH
     - run: ls -lah ~
+    - uses: ./.github/actions/install
+      with:
+        name: cargo-set-rust-version
+        version: '0.5.0'
 
   # complete:
   #   if: always()
