--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,12 +17,12 @@ jobs:
         - windows-latest
     runs-on: ${{ matrix.runs-on }}
     steps:
-    - run: echo $PATH
-    - run: ls -lah ~
+    - uses: actions/checkout@v3
     - uses: ./.github/actions/install
       with:
         name: cargo-set-rust-version
         version: '0.5.0'
+    - run: cargo-set-rust-version
 
   # complete:
   #   if: always()
