--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,7 +21,8 @@ jobs:
     - uses: ./.github/actions/install
       with:
         name: cargo-set-rust-version
-        version: '0.5.0'
+        version: 0.5.0
+        ref: v3
     - run: cargo-set-rust-version
 
   # complete:
