--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,13 +10,13 @@ jobs:
 
   complete:
     if: always()
-    needs: build-rust
+    needs: [cargo]
     runs-on: ubuntu-latest
     steps:
     - if: contains(needs.*.result, 'failure') || contains(needs.*.result, 'cancelled')
       run: exit 1
 
-  build-rust:
+  cargo:
     strategy:
       matrix:
         crate:
