--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,13 +10,13 @@ jobs:
 
   complete:
     if: always()
-    needs: build-rust
+    needs: [cargo]
     runs-on: ubuntu-latest
     steps:
     - if: contains(needs.*.result, 'failure') || contains(needs.*.result, 'cancelled')
       run: exit 1
 
-  build-rust:
+  cargo:
     strategy:
       matrix:
         crate:
@@ -26,11 +26,11 @@ jobs:
           version: '0.5.16'
         - name: cargo-set-rust-version
           version: '0.5.0'
-        sys:
-        - os: ubuntu-latest
-        - os: macos-latest
-        - os: windows-latest
-    runs-on: ${{ matrix.sys.os }}
+        runs-on:
+        - ubuntu-latest
+        - macos-latest
+        - windows-latest
+    runs-on: ${{ matrix.runs-on }}
     steps:
     - uses: actions/checkout@v3
     - run: rustup update
@@ -40,7 +40,7 @@ jobs:
       run: tar cvfz ${{ matrix.crate.name }}-${{ matrix.crate.version }}-${{ runner.os }}-${{ runner.arch }}.tar.gz -C bin .
     - uses: actions/upload-artifact@v3
       with:
-        name: ${{ matrix.crate.name }}-${{ matrix.crate.version }}-${{ matrix.sys.os }}
+        name: ${{ matrix.crate.name }}-${{ matrix.crate.version }}-${{ matrix.runs-on }}
         path: '*.tar.gz'
 
   release-create:
@@ -68,3 +68,30 @@ jobs:
     - run: gh release -R ${{ github.repository }} upload --clobber "${{ needs.release-create.outputs.tag }}" **/*.tar.gz
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+  release-test:
+    if: github.ref_name == 'main'
+    needs: release-upload
+    strategy:
+      matrix:
+        crate:
+        - name: cargo-workspaces
+          version: '0.2.35'
+        - name: cargo-hack
+          version: '0.5.16'
+        - name: cargo-set-rust-version
+          version: '0.5.0'
+        runs-on:
+        - ubuntu-latest
+        - macos-latest
+        - windows-latest
+    runs-on: ${{ matrix.runs-on }}
+    steps:
+    - uses: actions/checkout@v3
+    - uses: ./.github/actions/install
+      with:
+        name: ${{ matrix.crate.name }}
+        version: ${{ matrix.crate.version }}
+    - shell: bash
+      run: ${{ matrix.crate.name }}
+      continue-on-error: true
