--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -70,7 +70,6 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
   release-test:
-    if: github.ref_name == 'main'
     needs: release-upload
     strategy:
       matrix:
@@ -88,7 +87,7 @@ jobs:
     runs-on: ${{ matrix.runs-on }}
     steps:
     - uses: actions/checkout@v3
-    - uses: ./.github/actions/install
+    - uses: ./actions/install
       with:
         name: ${{ matrix.crate.name }}
         version: ${{ matrix.crate.version }}
