--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,7 +37,7 @@ jobs:
     - uses: actions/checkout@v3
     - shell: bash
       run: rustup update
-    - uses: stellar/actions/rust-cache@cachesupportmac
+    - uses: stellar/actions/rust-cache@main
     - shell: bash
       run: cargo install --target-dir ~/.cargo/target --root . --locked --version ${{ matrix.crate.version }} ${{ matrix.crate.name }}
     - shell: bash
