--- a/action.yml
+++ b/action.yml
@@ -16,7 +16,9 @@ runs:
       mkdir -p $HOME/.local/bin
       echo "$HOME/.local/bin" >> $GITHUB_PATH
   - shell: bash
+    env:
+      REF: ${{ github.action_ref }}
     run: |
       file="${{ inputs.name }}-${{ inputs.version }}-${{ runner.os }}-${{ runner.arch }}.tar.gz"
-      ref="${{ inputs.ref || github.action_ref }}"
+      ref="${{ inputs.ref || $REF }}"
       curl -fL https://github.com/stellar/binaries/releases/download/$ref/$file | tar xvz -C $HOME/.local/bin
