--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,6 +35,8 @@ jobs:
           version: '0.11.2'
         - name: soroban-cli
           version: '0.8.7'
+        - name: cargo-readme
+          version: '3.3.1'
         runs-on:
         - ubuntu-latest
         - macos-latest
