--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,7 +34,7 @@ jobs:
         - name: cargo-fuzz
           version: '0.11.2'
         - name: soroban-cli
-          version: '20.0.0-r.4.1'
+          version: '20.0.0-rc4'
         - name: cargo-readme
           version: '3.3.1'
         runs-on:
