--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,7 +34,9 @@ jobs:
         - name: cargo-fuzz
           version: '0.11.2'
         - name: soroban-cli
-          version: '0.8.7'
+          version: '20.0.0-rc.4.1'
+        - name: cargo-readme
+          version: '3.3.1'
         runs-on:
         - ubuntu-latest
         - macos-latest
