--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -39,6 +39,8 @@ jobs:
           version: '3.3.1'
         - name: cargo-semver-checks
           version: '0.27.0'
+        - name: cargo-public-api
+          version: '0.33.1'
         runs-on:
         - ubuntu-latest
         - macos-latest
