Add cargo-semver-checks and cargo-public-api (#17)
* Add cargo-semver-checks

* Update build.yml

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,6 +37,10 @@ jobs:
           version: '20.0.0-rc.4.1'
         - name: cargo-readme
           version: '3.3.1'
+        - name: cargo-semver-checks
+          version: '0.27.0'
+        - name: cargo-public-api
+          version: '0.33.1'
         runs-on:
         - ubuntu-latest
         - macos-latest
