--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -45,8 +45,8 @@ jobs:
           version: '0.12.1'
         runs-on:
         - ubuntu-latest
-        - macos-14
-        - macos-14-arm64
+        - macos-13 # x86
+        - macos-14 # arm64
         - windows-latest
     runs-on: ${{ matrix.runs-on }}
     steps:
