--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -47,6 +47,8 @@ jobs:
           version: '0.2.92'
         - name: check-lockfile-intersection
           version: '0.1.0'
+        - name: wasm-cs
+          version: '1.0.0'
         runs-on:
         - ubuntu-latest
         - macos-12 # amd64
