--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -80,7 +80,7 @@ jobs:
         package:
         - name: actionlint
           import-path: github.com/rhysd/actionlint/cmd/actionlint
-          version: 'v1.7.1'
+          version: '1.7.1'
         runs-on:
         - ubuntu-latest
         - macos-12 # amd64
@@ -93,7 +93,7 @@ jobs:
       with:
         go-version: stable
     - shell: bash
-      run: GOBIN="$PWD/bin" go install ${{ matrix.package.import-path }}@${{ matrix.package.version }}
+      run: GOBIN="$PWD/bin" go install ${{ matrix.package.import-path }}@v${{ matrix.package.version }}
     - shell: bash
       run: tar cvfz ${{ matrix.package.name }}-${{ matrix.package.version }}-${{ runner.os }}-${{ runner.arch }}.tar.gz -C bin .
     - uses: actions/upload-artifact@v3
