--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -66,12 +66,12 @@ jobs:
     runs-on: ${{ matrix.runs-on }}
     steps:
     - uses: actions/checkout@v3
-    - if: matrix.crate.rust
+    - if: 'matrix.crate.rust'
       shell: bash
       run: |
         rustup install ${{ matrix.crate.rust }}
         rustup default ${{ matrix.crate.rust }}
-    - if: !matrix.crate.rust
+    - if: '!matrix.crate.rust'
       shell: bash
       run: rustup update
     - shell: bash
