--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -58,6 +58,8 @@ jobs:
           version: '0.1.0'
         - name: wasm-cs
           version: '1.0.0'
+        - name: zizmor
+          version: '0.8.0
         runs-on:
         - ubuntu-latest
         - macos-12 # amd64
