--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,6 +33,8 @@ jobs:
           version: '0.3.6'
         - name: cargo-hack
           version: '0.5.28'
+        - name: cargo-hack
+          version: '0.6.35'
         - name: cargo-set-rust-version
           version: '0.5.0'
         - name: cargo-edit
