update release-test to depend on both release-create and release-upload

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -147,7 +147,7 @@ jobs:
 
   release-test:
     if: github.ref_name == 'main'
-    needs: release-upload
+    needs: [release-create, release-upload]
     strategy:
       matrix:
         runs-on:
