--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -172,3 +172,25 @@ jobs:
     - run: gh release -R ${{ github.repository }} upload --clobber "${{ needs.release-create.outputs.tag }}" **/*.tar.gz
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+  release-test:
+    if: github.ref_name == 'main'
+    needs: [release-create, release-upload]
+    strategy:
+      matrix:
+        runs-on:
+        - ubuntu-latest
+        - macos-latest
+        - windows-latest
+    runs-on: ${{ matrix.runs-on }}
+    defaults:
+      run:
+        shell: bash
+    steps:
+    - uses: actions/checkout@v5
+    - uses: ./action.yml
+      with:
+        name: wasm-cs
+        version: 1.0.0
+        ref: ${{ needs.release-create.outputs.tag }}
+    - run: wasm-cs -V
